--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects{
         compile("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
         compile("com.fasterxml.jackson.core:jackson-core:${jacksonVersion}")
         compile("com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}")
+        compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
 
         compile("com.incarcloud.ics:ics-map-tracking:2.2-SNAPSHOT")
 
