--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,17 @@ spring.resources.chain.cache: false
 spring:
   mvc:
     static-path-pattern: /static/**
+  datasource:
+    primary:
+      #      jdbc-url: jdbc:mysql://172.16.5.203:3306/test?autoReconnect=false
+      jdbc-url: jdbc:mysql://47.98.211.203:3306/test?autoReconnect=false
+      username: root
+      password: maptracking
+      maxActive: 32
+      maxIdle: 4
+      minIdle: 1
+      defaultAutoCommit: true
+      maxAge: 60000
+      testOnBorrow: true
+      testOnReturn: true
+      validationQuery: SELECT 1
