--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ allprojects{
         compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
 
         compile("com.incarcloud.ics:ics-map-tracking:3.2-SNAPSHOT")
-
+        compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
     }
 
     gradle.projectsEvaluated {
